--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -375,9 +375,6 @@
                                                         </imageView>
                                                     </subviews>
                                                 </tableViewCellContentView>
-                                                <connections>
-                                                    <segue destination="Eeb-o5-9lX" kind="show" id="pt9-8n-wo7"/>
-                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <connections>
@@ -403,6 +400,7 @@
                     <navigationItem key="navigationItem" title="brands" id="HIt-4M-vAk"/>
                     <connections>
                         <outlet property="tableBrands" destination="x0g-kb-hMO" id="2OP-v2-tL6"/>
+                        <segue destination="Eeb-o5-9lX" kind="presentation" identifier="segueBrandsToDetails" modalPresentationStyle="fullScreen" id="WlU-Z5-sWS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eze-yY-CT5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1450,63 +1448,128 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GP5-NR-Hc1">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="74" width="414" height="788"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rgq-zr-LIV">
-                                    <size key="itemSize" width="196" height="253"/>
+                                    <size key="itemSize" width="202" height="385"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="yMa-2b-UbQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="196" height="253"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ArticleCell" id="yMa-2b-UbQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="202" height="385"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ydD-rl-VGH">
-                                            <rect key="frame" x="0.0" y="0.0" width="196" height="253"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="202" height="385"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sBl-Bx-VXN">
-                                                    <rect key="frame" x="5" y="5" width="186" height="213"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sBl-Bx-VXN">
+                                                    <rect key="frame" x="11" y="10" width="180" height="230"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="180" id="lJE-Ym-RoV"/>
+                                                        <constraint firstAttribute="height" constant="230" id="34N-x0-x1i"/>
+                                                        <constraint firstAttribute="width" constant="180" id="9QK-Ga-MNv"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d4w-Gb-c1L">
-                                                    <rect key="frame" x="5" y="218" width="186" height="30"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d4w-Gb-c1L">
+                                                    <rect key="frame" x="10" y="250" width="132" height="40"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="NIn-ZU-1R0"/>
+                                                        <constraint firstAttribute="height" constant="40" id="oJc-Yl-r5h"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABK-IW-ALX">
+                                                    <rect key="frame" x="10" y="300" width="132" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="RAH-H6-WUb"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="otY-Qq-oih">
+                                                    <rect key="frame" x="36" y="345" width="130" height="30"/>
+                                                    <color key="backgroundColor" red="0.89947205779999995" green="0.65115249159999999" blue="0.7920641303" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="130" id="C2V-Lh-zbW"/>
+                                                        <constraint firstAttribute="height" constant="30" id="CKF-Mj-0xj"/>
+                                                    </constraints>
+                                                    <color key="tintColor" systemColor="systemBackgroundColor"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="Add to Cart"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <integer key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="sBl-Bx-VXN" secondAttribute="trailing" constant="5" id="5ct-N0-GCU"/>
-                                                <constraint firstAttribute="bottom" secondItem="d4w-Gb-c1L" secondAttribute="bottom" constant="5" id="7ZZ-mg-ecl"/>
-                                                <constraint firstItem="sBl-Bx-VXN" firstAttribute="leading" secondItem="ydD-rl-VGH" secondAttribute="leading" constant="5" id="Dcl-6B-X4x"/>
-                                                <constraint firstItem="sBl-Bx-VXN" firstAttribute="top" secondItem="ydD-rl-VGH" secondAttribute="top" constant="5" id="NdH-Nb-Mw9"/>
-                                                <constraint firstItem="d4w-Gb-c1L" firstAttribute="top" secondItem="sBl-Bx-VXN" secondAttribute="bottom" id="UE8-W8-6Xh"/>
-                                                <constraint firstItem="d4w-Gb-c1L" firstAttribute="leading" secondItem="ydD-rl-VGH" secondAttribute="leading" constant="5" id="buw-vv-d1i"/>
-                                                <constraint firstAttribute="trailing" secondItem="d4w-Gb-c1L" secondAttribute="trailing" constant="5" id="iea-G9-M7c"/>
+                                                <constraint firstItem="otY-Qq-oih" firstAttribute="top" secondItem="ABK-IW-ALX" secondAttribute="bottom" constant="5" id="8CP-qC-xdq"/>
+                                                <constraint firstItem="d4w-Gb-c1L" firstAttribute="top" secondItem="sBl-Bx-VXN" secondAttribute="bottom" constant="10" id="Hc7-fo-Lcj"/>
+                                                <constraint firstAttribute="bottom" secondItem="otY-Qq-oih" secondAttribute="bottom" constant="10" id="KK6-NY-M2P"/>
+                                                <constraint firstAttribute="trailing" secondItem="otY-Qq-oih" secondAttribute="trailing" constant="36" id="M7x-s0-LNX"/>
+                                                <constraint firstItem="sBl-Bx-VXN" firstAttribute="leading" secondItem="ydD-rl-VGH" secondAttribute="leading" constant="11" id="Uyb-AC-c2d"/>
+                                                <constraint firstAttribute="trailing" secondItem="ABK-IW-ALX" secondAttribute="trailing" constant="60" id="Wyq-nm-fVM"/>
+                                                <constraint firstItem="d4w-Gb-c1L" firstAttribute="leading" secondItem="ydD-rl-VGH" secondAttribute="leading" constant="10" id="gBI-jQ-gIn"/>
+                                                <constraint firstAttribute="trailing" secondItem="d4w-Gb-c1L" secondAttribute="trailing" constant="60" id="mBZ-ra-ayi"/>
+                                                <constraint firstItem="ABK-IW-ALX" firstAttribute="top" secondItem="d4w-Gb-c1L" secondAttribute="bottom" constant="10" id="sJL-Du-WuB"/>
+                                                <constraint firstItem="ABK-IW-ALX" firstAttribute="leading" secondItem="ydD-rl-VGH" secondAttribute="leading" constant="10" id="x4v-yO-Z5b"/>
+                                                <constraint firstAttribute="trailing" secondItem="sBl-Bx-VXN" secondAttribute="trailing" constant="11" id="zlf-Fr-SXk"/>
+                                                <constraint firstItem="sBl-Bx-VXN" firstAttribute="top" secondItem="ydD-rl-VGH" secondAttribute="top" constant="10" id="zof-Da-BIR"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="196" height="253"/>
+                                        <size key="customSize" width="202" height="385"/>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Eeb-o5-9lX" id="Zy3-HN-Zq0"/>
+                                    <outlet property="delegate" destination="Eeb-o5-9lX" id="Jpa-G0-xWG"/>
+                                </connections>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mode Sous Categorie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ukE-L4-xou">
+                                <rect key="frame" x="0.0" y="44" width="414" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4Ya-wI-sBV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" systemColor="systemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tZ0-3u-VRy">
+                                <rect key="frame" x="0.0" y="44" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="HsA-07-l1b"/>
+                                    <constraint firstAttribute="width" constant="50" id="aAw-TA-NPJ"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
+                                <connections>
+                                    <action selector="back:" destination="Eeb-o5-9lX" eventType="touchUpInside" id="U5t-IA-Wyv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="sI3-fg-2U3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="top" secondItem="sI3-fg-2U3" secondAttribute="top" id="6hJ-iN-qPY"/>
-                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="leading" secondItem="sI3-fg-2U3" secondAttribute="leading" id="DXZ-Oc-D9g"/>
-                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="trailing" secondItem="sI3-fg-2U3" secondAttribute="trailing" id="vgx-9O-qDM"/>
-                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="bottom" secondItem="sI3-fg-2U3" secondAttribute="bottom" id="wML-xC-LhC"/>
+                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="trailing" secondItem="sI3-fg-2U3" secondAttribute="trailing" id="B7B-vQ-6rx"/>
+                            <constraint firstItem="ukE-L4-xou" firstAttribute="trailing" secondItem="sI3-fg-2U3" secondAttribute="trailing" id="JVV-vO-Qj3"/>
+                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="top" secondItem="tZ0-3u-VRy" secondAttribute="bottom" id="LGa-hI-89h"/>
+                            <constraint firstItem="tZ0-3u-VRy" firstAttribute="leading" secondItem="sI3-fg-2U3" secondAttribute="leading" id="UOa-bz-H7h"/>
+                            <constraint firstItem="ukE-L4-xou" firstAttribute="leading" secondItem="sI3-fg-2U3" secondAttribute="leading" id="WNh-gs-sOC"/>
+                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="top" secondItem="ukE-L4-xou" secondAttribute="bottom" id="bfV-DW-Od4"/>
+                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="bottom" secondItem="sI3-fg-2U3" secondAttribute="bottom" id="c9j-Y6-gYm"/>
+                            <constraint firstItem="ukE-L4-xou" firstAttribute="top" secondItem="sI3-fg-2U3" secondAttribute="top" id="jFJ-W6-Ltk"/>
+                            <constraint firstItem="GP5-NR-Hc1" firstAttribute="leading" secondItem="sI3-fg-2U3" secondAttribute="leading" id="pXH-FY-j4T"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kCA-ta-qoP"/>
+                    <connections>
+                        <outlet property="collectionArticle" destination="GP5-NR-Hc1" id="qEm-ff-oE6"/>
+                        <outlet property="scName" destination="ukE-L4-xou" id="oSX-vs-7ug"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bay-Pn-Huo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2404,7 +2467,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="pIF-fg-ROz"/>
+        <segue reference="CQc-dh-lYr"/>
         <segue reference="zlm-2g-rDi"/>
         <segue reference="FdU-sM-cdB"/>
         <segue reference="6ei-Hb-nWL"/>
