--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -374,23 +374,8 @@
                     <view key="view" contentMode="scaleToFill" id="FRR-Qg-NdS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FW4-4e-IkA">
-                                <rect key="frame" x="132" y="792" width="150" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="4ZC-bP-SIo"/>
-                                    <constraint firstAttribute="width" constant="150" id="ZbJ-JZ-FAI"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="paymentButton"/>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="P22-DL-dbx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="FW4-4e-IkA" firstAttribute="centerX" secondItem="P22-DL-dbx" secondAttribute="centerX" id="e68-u8-OO7"/>
-                            <constraint firstItem="P22-DL-dbx" firstAttribute="bottom" secondItem="FW4-4e-IkA" secondAttribute="bottom" constant="20" id="fsI-zW-07E"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZkG-21-46f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1279,7 +1264,7 @@
                                         <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                     </stackView>
                                     <view contentMode="scaleToFill" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="Cdw-Wf-kLA">
-                                        <rect key="frame" x="0.0" y="428.5" width="394" height="342.5"/>
+                                        <rect key="frame" x="0.0" y="428.5" width="394" height="357.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hz-ZJ-jGM">
                                                 <rect key="frame" x="10" y="0.0" width="374" height="50"/>
@@ -1321,7 +1306,7 @@
                                                 <rect key="frame" x="175" y="140" width="51" height="31"/>
                                             </switch>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CAi-M9-gbd">
-                                                <rect key="frame" x="20" y="282.5" width="354" height="40"/>
+                                                <rect key="frame" x="20" y="297.5" width="354" height="40"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wanna register as a Company?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msx-1P-7ZC">
                                                         <rect key="frame" x="0.0" y="0.0" width="230" height="40"/>
@@ -1366,7 +1351,7 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WuQ-w3-jw9">
-                                                <rect key="frame" x="97" y="234.5" width="200" height="40"/>
+                                                <rect key="frame" x="97" y="249.5" width="200" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="9FM-tA-RT5"/>
                                                     <constraint firstAttribute="width" constant="200" id="Mcv-w0-EsC"/>
@@ -1377,12 +1362,25 @@
                                                     <action selector="ForgetPassword:" destination="6Ep-DF-EGL" eventType="touchUpInside" id="sny-n7-c24"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4u-fg-MNo">
+                                                <rect key="frame" x="147" y="195" width="100" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="VIy-Y9-a9c"/>
+                                                    <constraint firstAttribute="width" constant="100" id="cK8-7j-9gm"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Face id"/>
+                                                <connections>
+                                                    <action selector="didTapButton:" destination="6Ep-DF-EGL" eventType="touchUpInside" id="rei-e5-zi6"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="iST-2J-sYc" firstAttribute="leading" secondItem="Cdw-Wf-kLA" secondAttribute="leading" constant="10" id="3aB-yK-sS5"/>
                                             <constraint firstItem="CAi-M9-gbd" firstAttribute="leading" secondItem="Cdw-Wf-kLA" secondAttribute="leading" constant="20" id="5sV-uf-TJy"/>
                                             <constraint firstItem="CAi-M9-gbd" firstAttribute="top" secondItem="WuQ-w3-jw9" secondAttribute="bottom" constant="8" id="7AG-ZF-sIh"/>
+                                            <constraint firstItem="I4u-fg-MNo" firstAttribute="centerX" secondItem="Cdw-Wf-kLA" secondAttribute="centerX" id="9Xl-iN-cT2"/>
                                             <constraint firstItem="iST-2J-sYc" firstAttribute="top" secondItem="3hz-ZJ-jGM" secondAttribute="bottom" constant="10" id="Br1-1g-Tig"/>
                                             <constraint firstItem="WuQ-w3-jw9" firstAttribute="centerX" secondItem="Cdw-Wf-kLA" secondAttribute="centerX" id="FpO-V1-HNj"/>
                                             <constraint firstItem="LUZ-1R-Ryo" firstAttribute="top" secondItem="iST-2J-sYc" secondAttribute="bottom" constant="30" id="NsG-XL-VsC"/>
@@ -1391,25 +1389,26 @@
                                             <constraint firstAttribute="trailing" secondItem="3hz-ZJ-jGM" secondAttribute="trailing" constant="10" id="h5n-qU-PeD"/>
                                             <constraint firstItem="3hz-ZJ-jGM" firstAttribute="top" secondItem="Cdw-Wf-kLA" secondAttribute="top" id="ha9-zh-Gfo"/>
                                             <constraint firstItem="LUZ-1R-Ryo" firstAttribute="leading" secondItem="Cdw-Wf-kLA" secondAttribute="leading" constant="175" id="mny-R4-J43"/>
+                                            <constraint firstItem="I4u-fg-MNo" firstAttribute="top" secondItem="LUZ-1R-Ryo" secondAttribute="bottom" constant="24" id="oXM-9M-aRN"/>
                                             <constraint firstItem="3hz-ZJ-jGM" firstAttribute="leading" secondItem="Cdw-Wf-kLA" secondAttribute="leading" constant="10" id="yhz-JA-LYo"/>
                                             <constraint firstAttribute="trailing" secondItem="iST-2J-sYc" secondAttribute="trailing" constant="10" id="zRD-aJ-RAo"/>
                                             <constraint firstAttribute="width" constant="394" id="zhy-11-egc"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="P0V-Tg-nDK">
-                                        <rect key="frame" x="0.0" y="779" width="394" height="31"/>
+                                        <rect key="frame" x="0.0" y="794" width="394" height="16"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="kID-M3-xsO">
-                                                <rect key="frame" x="52.5" y="0.0" width="289" height="31"/>
+                                                <rect key="frame" x="52.5" y="0.0" width="289" height="16"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTN-xO-0W8">
-                                                        <rect key="frame" x="0.0" y="0.0" width="142.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="142.5" height="16"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SY6-Sr-s5i">
-                                                        <rect key="frame" x="146.5" y="0.0" width="142.5" height="31"/>
+                                                        <rect key="frame" x="146.5" y="0.0" width="142.5" height="16"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" title="Sign up">
                                                             <color key="baseForegroundColor" red="0.89947205779999995" green="0.65115249159999999" blue="0.7920641303" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2434,6 +2433,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="gDw-LR-me7"/>
         <segue reference="CQc-dh-lYr"/>
         <segue reference="Kza-w1-WLq"/>
         <segue reference="3zH-gj-nru"/>
